2007-10-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: there is no escaping in
	single-quoted strings.

2007-10-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (gtk_source_context_engine_attach_buffer),
	(_gtk_source_context_data_finish_parse): check main context in finish_parse(),
	so it doesn't crash later. Fixes #485661 (Mildred).

2007-10-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/csharp.lang: add 'partial' keyword.

2007-09-30  Marco Barisione <marco@barisione.org>

	* gtksourceview/language-specs/javascript.lang: add
	application/javascript to the list of mime types.

2007-09-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/R.lang: removed DOCTYPE line,
	not true anymore.

=== gtksourceview 2.0.0 ===

2007-09-17  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 2.0.0 released.

2007-09-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: case-esac context: match
	strings before "*)" to work around its great lameness.

2007-09-14  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/php.lang: made extend-parent="true"
	for string contexts, fixes 476692.

2007-09-11  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/python.lang: relicense to LGPL, all
	authors agreed.

2007-09-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/perl.lang: added "pod" style
	for the POD thing; fixed invalid style references.

	* gtksourceview/language-specs/docbook.lang: use \b in keywords
	suffixes, since we don't want to match <param> as <para>, etc.

	* gtksourceview/language-specs/libtool.lang: added "constant"
	style for both booleans and numbers.

	* gtksourceview/language-specs/texinfo.lang: allow trailing whitespace
	for commands like @ignore.

	* gtksourceview/language-specs/html.lang: fixed invalid style reference.
